tests/_resources/error_gcns/E001_multiline_missing_semicolon.gcn
# Error: Missing semicolon in multi-line equation
block PRODUCTION
{
    identities
    {
        Y[] = A[] * K[-1] ^ alpha
              * L[] ^ (1 - alpha)
        Z[] = X[];
    };
};
